# dayrize_task

./: .env  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  spec.md
dayrizer_task/: apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
dayrizer_task/migrations/: 0001_initial.py
dayrizer_task/tests/: tests.py
