[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry]
name = "dayrizer-task"
version = "0.1.0"
description = ""
authors = ["Karim Moradi <kmoradi.ai@gmail.com>"]
readme = "README.md"
#packages = [{include = "dayrizer_task"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
requests = "^2.28.2"
psycopg2-binary = "^2.9.5"
django-redis = "^5.2.0"
requests-mock = "^1.10.0"
python-dotenv = "^0.21.1"
pre-commit = "^3.0.4"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
